fix(styles): Shift context label down to be centered with icon (#3400)

--- a/system-addon/content-src/styles/_icons.scss
+++ b/system-addon/content-src/styles/_icons.scss
@@ -75,6 +75,7 @@
 
   &.icon-trending {
     background-image: url('#{$image-path}glyph-trending-16.svg');
+    transform: translateY(2px); /* trending bolt is visually top heavy */
   }
 
   &.icon-now {
